After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 700625 - gnome-shell-3.8.2 crashes when pressing Alt+PrintScreen and no window is opened
gnome-shell-3.8.2 crashes when pressing Alt+PrintScreen and no window is opened
Status: RESOLVED FIXED
Product: gnome-shell
Classification: Core
Component: general
3.8.x
Other Linux
: Normal normal
: ---
Assigned To: gnome-shell-maint
gnome-shell-maint
Depends on:
Blocks:
 
 
Reported: 2013-05-19 09:57 UTC by Pacho Ramos
Modified: 2013-05-19 13:32 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
screenshot: Check for NULL window in screenshot_window() (1.33 KB, patch)
2013-05-19 10:32 UTC, Florian Müllner
committed Details | Review

Description Pacho Ramos 2013-05-19 09:57:51 UTC
With this backtrace:
[New LWP 29184]
[New LWP 29187]
[New LWP 29189]
[New LWP 29188]
[New LWP 29190]
[New LWP 29313]
warning: Could not load shared library symbols for linux-vdso.so.1.
Do you need "set solib-search-path" or "set sysroot"?
[Thread debugging using libthread_db enabled]
Using host libthread_db library "/lib64/libthread_db.so.1".
Core was generated by `/usr/bin/gnome-shell'.
Program terminated with signal 11, Segmentation fault.

Thread 1 (Thread 0x7f492d109900 (LWP 29184))

  • #0 meta_window_get_outer_rect
    at core/window.c line 5825
  • #1 shell_screenshot_screenshot_window
    at shell-screenshot.c line 500
  • #2 ffi_call_unix64
    from /usr/lib64/libffi.so.6
  • #3 ffi_call
    from /usr/lib64/libffi.so.6
  • #4 ??
    from /usr/lib64/libgjs.so.0
  • #5 ??
    from /usr/lib64/libgjs.so.0
  • #6 ??
    from /usr/lib64/libmozjs185.so.1.0
  • #7 ??
    from /usr/lib64/libmozjs185.so.1.0
  • #8 ??
    from /usr/lib64/libmozjs185.so.1.0
  • #9 ??
    from /usr/lib64/libmozjs185.so.1.0
  • #10 ??
    from /usr/lib64/libmozjs185.so.1.0
  • #11 ??
    from /usr/lib64/libmozjs185.so.1.0
  • #12 ??
    from /usr/lib64/libmozjs185.so.1.0
  • #13 ??
    from /usr/lib64/libmozjs185.so.1.0
  • #14 ??
    from /usr/lib64/libmozjs185.so.1.0
  • #15 ??
    from /usr/lib64/libmozjs185.so.1.0
  • #16 ??
    from /usr/lib64/libmozjs185.so.1.0
  • #17 ??
    from /usr/lib64/libmozjs185.so.1.0
  • #18 ??
    from /usr/lib64/libmozjs185.so.1.0
  • #19 JS_CallFunctionValue
    from /usr/lib64/libmozjs185.so.1.0
  • #20 gjs_call_function_value
    from /usr/lib64/libgjs.so.0
  • #21 gjs_closure_invoke
    from /usr/lib64/libgjs.so.0
  • #22 ??
    from /usr/lib64/libgjs.so.0
  • #23 g_closure_invoke
    at gclosure.c line 777
  • #24 signal_emit_unlocked_R
    at gsignal.c line 3584
  • #25 g_signal_emit_valist
    at gsignal.c line 3328
  • #26 g_signal_emit
    at gsignal.c line 3384
  • #27 g_dbus_interface_method_dispatch_helper
    at gdbusinterfaceskeleton.c line 610
  • #28 skeleton_intercept_handle_method_call
    at gdbusinterfaceskeleton.c line 651
  • #29 call_in_idle_cb
    at gdbusconnection.c line 4737
  • #30 g_main_dispatch
    at gmain.c line 3054
  • #31 g_main_context_dispatch
    at gmain.c line 3630
  • #32 g_main_context_iterate
    at gmain.c line 3701
  • #33 g_main_context_iterate
    at gmain.c line 3638
  • #34 g_main_loop_run
    at gmain.c line 3895
  • #35 meta_run
    at core/main.c line 556
  • #36 main
    at main.c line 430

Comment 1 Florian Müllner 2013-05-19 10:32:34 UTC
Created attachment 244699 [details] [review]
screenshot: Check for NULL window in screenshot_window()

screenshot_window() currently assumes a focus window, which will
result in a crash if that's not the case.
Comment 2 Jasper St. Pierre (not reading bugmail) 2013-05-19 13:27:46 UTC
Review of attachment 244699 [details] [review]:

OK.
Comment 3 Florian Müllner 2013-05-19 13:32:35 UTC
Attachment 244699 [details] pushed as c68ccbf - screenshot: Check for NULL window in screenshot_window()